초기 값 세팅 FEED 추가